--- a/ProductService.Dtos/ProductService.Dtos.csproj
+++ b/ProductService.Dtos/ProductService.Dtos.csproj
@@ -5,5 +5,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
+	<ItemGroup>
+		<PackageReference Include="protobuf-net.Grpc" Version="1.2.2" />
+		<PackageReference Include="protobuf-net.Grpc.AspNetCore" Version="1.2.2" />
+	</ItemGroup>
 </Project>
