--- a/ProductService.IAppService/ProductService.IAppService.csproj
+++ b/ProductService.IAppService/ProductService.IAppService.csproj
@@ -5,7 +5,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
+	<ItemGroup>
+		<PackageReference Include="protobuf-net.Grpc" Version="1.2.2" />
+		<PackageReference Include="protobuf-net.Grpc.AspNetCore" Version="1.2.2" />
+	</ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EasyDapr.Core\EasyDapr.Core.csproj" />
     <ProjectReference Include="..\ProductService.Dtos\ProductService.Dtos.csproj" />
