--- a/UserService.IAppService/UserService.IAppService.csproj
+++ b/UserService.IAppService/UserService.IAppService.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EasyDapr.Core\EasyDapr.Core.csproj" />
+    <ProjectReference Include="..\ProductService.Dtos\ProductService.Dtos.csproj" />
     <ProjectReference Include="..\UserService.Dtos\UserService.Dtos.csproj" />
   </ItemGroup>
 
