--- a/ProductService.AppService/ProductService.AppService.csproj
+++ b/ProductService.AppService/ProductService.AppService.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\EasyDapr.Core\EasyDapr.Core.csproj" />
+		<ProjectReference Include="..\ProductService.Dtos\ProductService.Dtos.csproj" />
 		<ProjectReference Include="..\ProductService.IAppService\ProductService.IAppService.csproj" />
 		<ProjectReference Include="..\UserService.Dtos\UserService.Dtos.csproj" />
 	</ItemGroup>
