--- a/UserService.Dtos/UserService.Dtos.csproj
+++ b/UserService.Dtos/UserService.Dtos.csproj
@@ -1,9 +1,21 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net8.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
+	<ItemGroup>
+		<PackageReference Include="protobuf-net.Grpc" Version="1.2.2" />
+		<PackageReference Include="protobuf-net.Grpc.AspNetCore" Version="1.2.2" />
+		<PackageReference Include="Google.Protobuf" Version="3.30.2" />
+		<PackageReference Include="Grpc.Tools" Version="2.71.0" />
+	</ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\EasyDapr.Core\EasyDapr.Core.csproj" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="Protos\" />
+	</ItemGroup>
 
 </Project>
