--- a/EasyDapr.Core/EasyDapr.Core.csproj
+++ b/EasyDapr.Core/EasyDapr.Core.csproj
@@ -13,6 +13,12 @@
 		<PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
 		<PackageReference Include="FreeSql" Version="3.5.202" />
 		<PackageReference Include="FreeSql.Provider.MySql" Version="3.5.202" />
+		<PackageReference Include="Google.Protobuf" Version="3.30.2" />
+		<PackageReference Include="Grpc.Tools" Version="2.71.0">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="MessagePack" Version="3.1.3" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.3" />
 		<PackageReference Include="Microsoft.Extensions.DependencyModel" Version="9.0.4" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
@@ -20,12 +26,13 @@
 		<PackageReference Include="Dapr.Actors" Version="1.15.3" />
 		<PackageReference Include="Dapr.AspNetCore" Version="1.15.3" />
 		<PackageReference Include="Dapr.Extensions.Configuration" Version="1.15.3" />
+	 
 	</ItemGroup>
 
 	<ItemGroup>
 	  <Folder Include="Abstractions\" />
 	  <Folder Include="Filters\" />
-	  <Folder Include="Grpc\" />
+	  <Folder Include="Grpcs\" />
 	</ItemGroup>
 
 </Project>
